[gd_scene load_steps=22 format=3 uid="uid://vcojxemh4fsc"]

[ext_resource type="Texture2D" uid="uid://dq44ccg3ysg6j" path="res://assets/ui/options_container.png" id="1_6r3ve"]
[ext_resource type="Script" uid="uid://c1daf4wka7u5f" path="res://menus/options_menu.gd" id="1_l4xqj"]
[ext_resource type="FontFile" uid="uid://camtosjq61o18" path="res://assets/ui/alagard.ttf" id="2_cet7k"]
[ext_resource type="Texture2D" uid="uid://c86kaa382yi5k" path="res://assets/ui/scroll_grabber.png" id="3_1vpws"]
[ext_resource type="Texture2D" uid="uid://bp85pw1gug553" path="res://assets/ui/button_horizontal_1.png" id="3_t77c5"]
[ext_resource type="Texture2D" uid="uid://beypbuxox7cw" path="res://assets/ui/scroll_scroll.png" id="4_1vpws"]
[ext_resource type="Texture2D" uid="uid://bk2cyygdoropf" path="res://assets/ui/button_cancel.png" id="5_sg76y"]
[ext_resource type="AudioStream" uid="uid://c5tdbhmgpgvun" path="res://assets/sounds/soundeffects/sound_button.mp3" id="7_eeh4p"]

[sub_resource type="Animation" id="Animation_l4xqj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_eeh4p"]
resource_name = "end"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.588235), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_sg76y"]
resource_name = "start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.588235)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t77c5"]
_data = {
&"RESET": SubResource("Animation_l4xqj"),
&"end": SubResource("Animation_eeh4p"),
&"start": SubResource("Animation_sg76y")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4xqj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nmiyo"]
texture = ExtResource("3_t77c5")
modulate_color = Color(1.2, 1.2, 1.2, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_foede"]
texture = ExtResource("3_t77c5")
modulate_color = Color(1.5, 1.5, 1.5, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e4kiy"]
texture = ExtResource("3_t77c5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uhll8"]
texture = ExtResource("3_t77c5")
texture_margin_left = 3.0
texture_margin_right = 3.0
modulate_color = Color(0, 0, 0, 0.384314)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sg76y"]
texture = ExtResource("4_1vpws")
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eeh4p"]
texture = ExtResource("5_sg76y")
modulate_color = Color(1.2, 1.2, 1.2, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t77c5"]
texture = ExtResource("5_sg76y")
modulate_color = Color(1.5, 1.5, 1.5, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2k4wj"]
texture = ExtResource("5_sg76y")

[node name="options_menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_l4xqj")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t77c5")
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 2
position = Vector2(112, 168)
scale = Vector2(1e-05, 1e-05)

[node name="Buttonchangename" type="Button" parent="Node2D"]
z_index = 1
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = -40.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_cet7k")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4xqj")
theme_override_styles/hover = SubResource("StyleBoxTexture_nmiyo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_foede")
theme_override_styles/normal = SubResource("StyleBoxTexture_e4kiy")
text = "change"

[node name="TextEdit" type="TextEdit" parent="Node2D"]
z_index = 1
offset_left = -48.0
offset_top = -79.0
offset_right = 80.0
offset_bottom = -58.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_cet7k")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxTexture_uhll8")
placeholder_text = "name"

[node name="OptionsContainer" type="Sprite2D" parent="Node2D"]
position = Vector2(4.29153e-06, 32)
scale = Vector2(1.125, 1.125)
texture = ExtResource("1_6r3ve")

[node name="title" type="Label" parent="Node2D"]
offset_left = -77.0
offset_top = -104.0
offset_right = 51.0
offset_bottom = -86.0
scale = Vector2(1.2, 1.2)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("2_cet7k")
theme_override_font_sizes/font_size = 16
text = "-OPTIONS-"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="label_master" type="Label" parent="Node2D"]
offset_left = -64.0
offset_top = -52.0
offset_right = 64.0
offset_bottom = -7.0
theme_override_colors/font_color = Color(0.573333, 0.36, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_cet7k")
theme_override_font_sizes/font_size = 16
text = "General volume"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="masterslider" type="HSlider" parent="Node2D/label_master"]
layout_mode = 0
offset_left = 12.0
offset_top = 29.0
offset_right = 116.0
offset_bottom = 61.0
theme_override_icons/grabber = ExtResource("3_1vpws")
theme_override_icons/grabber_highlight = ExtResource("3_1vpws")
theme_override_icons/grabber_disabled = ExtResource("3_1vpws")
theme_override_styles/slider = SubResource("StyleBoxTexture_sg76y")
max_value = 1.0
step = 0.1

[node name="label_music" type="Label" parent="Node2D"]
offset_left = -64.0
offset_top = -4.0
offset_right = 64.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.573333, 0.36, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_cet7k")
theme_override_font_sizes/font_size = 16
text = "Music volume"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="musicslider" type="HSlider" parent="Node2D/label_music"]
layout_mode = 0
offset_left = 12.0
offset_top = 29.0
offset_right = 116.0
offset_bottom = 61.0
theme_override_icons/grabber = ExtResource("3_1vpws")
theme_override_icons/grabber_highlight = ExtResource("3_1vpws")
theme_override_icons/grabber_disabled = ExtResource("3_1vpws")
theme_override_styles/slider = SubResource("StyleBoxTexture_sg76y")
max_value = 1.0
step = 0.1

[node name="label_effects" type="Label" parent="Node2D"]
offset_left = -64.0
offset_top = 44.0
offset_right = 64.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(0.573333, 0.36, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_cet7k")
theme_override_font_sizes/font_size = 16
text = "Effects volume"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="effectsslider" type="HSlider" parent="Node2D/label_effects"]
layout_mode = 0
offset_left = 12.0
offset_top = 29.0
offset_right = 116.0
offset_bottom = 61.0
theme_override_icons/grabber = ExtResource("3_1vpws")
theme_override_icons/grabber_highlight = ExtResource("3_1vpws")
theme_override_icons/grabber_disabled = ExtResource("3_1vpws")
theme_override_styles/slider = SubResource("StyleBoxTexture_sg76y")
max_value = 1.0
step = 0.1
value = 0.5

[node name="Button" type="Button" parent="Node2D"]
offset_left = -28.0
offset_top = 108.0
offset_right = 28.0
offset_bottom = 164.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4xqj")
theme_override_styles/hover = SubResource("StyleBoxTexture_eeh4p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_t77c5")
theme_override_styles/normal = SubResource("StyleBoxTexture_2k4wj")

[node name="button_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_eeh4p")
volume_db = -20.0
bus = &"SFX"

[connection signal="pressed" from="Node2D/Buttonchangename" to="." method="_on_buttonchangename_pressed"]
[connection signal="value_changed" from="Node2D/label_master/masterslider" to="." method="_on_masterslider_value_changed"]
[connection signal="value_changed" from="Node2D/label_music/musicslider" to="." method="_on_musicslider_value_changed"]
[connection signal="value_changed" from="Node2D/label_effects/effectsslider" to="." method="_on_effectsslider_value_changed"]
[connection signal="pressed" from="Node2D/Button" to="." method="_on_button_pressed"]
